@@ -33,11 +33,13 @@ import net.minecraft.world.item.MapItem;
 import net.minecraft.world.item.TooltipFlag;
 import net.minecraft.world.level.ChunkPos;
 import net.minecraft.world.level.Level;
+import net.minecraft.world.level.LevelAccessor;
 import net.minecraft.world.level.biome.Biome;
 import net.minecraft.world.level.levelgen.structure.StructureStart;
 import net.minecraft.world.level.saveddata.maps.MapItemSavedData;
 import net.minecraft.world.phys.AABB;
 import net.fabricmc.api.EnvType;
+import net.minecraftforge.event.world.WorldEvent;
 import net.fabricmc.api.Environment;
 import twilightforest.entity.TFEntities;
 import twilightforest.entity.TFPart;
@@ -128,7 +130,7 @@ public class ASMHooks {
 		return music;
 	}
 
-	private static final WeakHashMap<Level, List<TFPart<?>>> cache = new WeakHashMap<>();
+	private static final WeakHashMap<LevelAccessor, List<TFPart<?>>> cache = new WeakHashMap<>();
 	private static final Int2ObjectMap<TFPart<?>> multiparts = new Int2ObjectOpenHashMap<>();
 
 	// This only works on the client side in 1.17...
@@ -138,8 +140,8 @@ public class ASMHooks {
 			synchronized (cache) {
 				cache.computeIfAbsent(world, (w) -> new ArrayList<>());
 				cache.get(world).addAll(Arrays.stream(Objects.requireNonNull(partEntity.getParts())).
-						filter(TFPart.class::isInstance).map(obj -> (TFPart<?>) obj).
-						collect(Collectors.toList()));
+						filter(TFPart.class::isInstance).map(obj -> (TFPart<?>) obj)
+						.toList());
 
 			}
 		});
@@ -148,12 +150,15 @@ public class ASMHooks {
 			synchronized (cache) {
 				cache.computeIfPresent(entityWorld, (world, list) -> {
 					list.removeAll(Arrays.stream(Objects.requireNonNull(partEntity.getParts())).
-							filter(TFPart.class::isInstance).map(obj -> (TFPart<?>) obj).
-							collect(Collectors.toList()));
+							filter(TFPart.class::isInstance).map(obj -> (TFPart<?>) obj)
+							.toList());
 					return list;
 				});
+				if (cache.get(event.getWorld()).isEmpty())
+					cache.remove(event.getWorld());
 			}
 		}));
+		bus.addListener((Consumer<WorldEvent.Unload>) event -> cache.remove(event.getWorld()));
 	}
 
 	/**
@@ -190,6 +195,8 @@ public class ASMHooks {
 					parts.removeAll(list);
 					return parts;
 				});
+				if (cache.get(entity.level).isEmpty())
+					cache.remove(entity.level);
 			}
 		}
 	}
